# pySLM

./: pyproject.toml
optics/: .gitignore  LICENSE.txt  MANIFEST.in  README.md  requirements.txt  setup.py
optics/docs/: Makefile  make.bat
optics/docs/source/: conf.py  index.rst
optics/examples/: first.py  test_random_zernike_coefficients.py
optics/examples/calc/: auto_correlator.py  beam_propagation.py  complex_zoom.py  fit_zernike.py  phase_retrieval.py  plot_psf_and_otf.py  pupil_equation.py  scattering_in_the_cloud.py  show_zernikes.py  simulate_image.py  subpixel_registration.py
optics/examples/display/: analyze_echelle_grating.py  benchmark_hsv2rgb.py  complex_color_legend.py  complex_color_legend_rectangle.py  custom_colormap.py  custom_colormap_used_in_paper.py  manim_animation.py  show_reference_objects.py
optics/examples/experimental/: NI_reader.py  Nanostage_focus_scan.py  __init__.py  (+23 more)
optics/optics/: __init__.py
optics/projects/: __init__.py
optics/tests/: __init__.py  test_beam.py  test_cam.py  test_cam_center_roi_around_peak_intensity.py  test_center_roi_around_peak_intensity.py  test_complex2rgb.py  test_correction_from_pupil.py  test_czt.py  test_factorial_fraction.py  test_factorial_product_fraction.py  test_gaussian.py  test_grid.py  test_hsv.py  test_interferogram.py  test_merge_dicts.py  test_objective.py  test_pad_to_length.py  test_peak.py  test_polynomial.py  test_psf.py  test_roi.py  test_slm.py  test_subpixel.py  test_vector_algebra.py  test_zernike.py
src/pySLM/: initial_profiles.py  main.ipynb  slmpy.py  test.py  test2.py
(+246 files in other folders)
