[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pySLM"
version = "0.0.1"
authors = [
  { name="Marcos Gil", email="marcosgildeoliveira@gmail.com.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]